Improve performance of CRNHTTPProtocolHandlerProxyWithClientThread by switching to blocks

The change improves the performance of CRNHTTPProtocolHandlerProxyWithClientThread and simplifies
the code. Profiling indicates that the new postBlockToClientThread method is about 37% faster
than the postToClientThread method.

Bug: 740139
Change-Id: Ib35e17f1c04318845bc1a1e4cb19aa0876023845